fix: update privacy policy and terms and conditions

--- a/public/pages/politica-privacidad.html
+++ b/public/pages/politica-privacidad.html
@@ -1,143 +1,165 @@
 <!DOCTYPE html>
-
 <html lang="es">
-
 <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Política de Privacidad – Artífices Studio</title>
-    <!-- Tipografías de Artífices Studio -->
-    <link href="https://use.typekit.net/nwp0lmg.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/helvetica_neue.css">
-    <link rel="stylesheet" href="/css/styles.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Política de Privacidad – Artífices – Creative Studio</title>
+  <meta name="description" content="Política de Privacidad de Artífices – Creative Studio. Conoce cómo tratamos tus datos personales conforme a la Ley 19.628 y preparamos el cumplimiento de la Ley 21.719." />
+  <link rel="canonical" href="https://landing.artifices.studio/pages/politica-privacidad.html" />
 
-    <link rel="icon" type="image/svg+xml" href="/assets/icons/favicon.svg">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/assets/icons/favicon-96x96.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <meta name="apple-mobile-web-app-title" content="Artífices">
-    <meta name="theme-color" content="#000000">
+  <!-- Tipografías y estilos -->
+  <link rel="stylesheet" href="https://use.typekit.net/nwp0lmg.css" />
+  <link rel="stylesheet" href="/css/helvetica_neue.css" />
+  <link rel="stylesheet" href="/css/styles.css" />
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/assets/icons/favicon.svg" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <meta name="theme-color" content="#000000" />
 
+  
 </head>
-
 <body>
-    <!-- HEADER -->
-    <header>
-        <div class="container header-inner">
-            <a href="/" title="Inicio" class="logo" aria-label="Volver al inicio">
-            <div style="display:flex;flex-direction:column;align-items:center">
-                <img
-                src="/assets/images/logotipoartificesoficial.svg"
-                alt="Logotipo Artífices"
-                style="height:1.75rem" />
-                <span class="font-primary tagline">Experimental Creative Studio</span>
-            </div>
-            </a>
-        </div>
-    </header>
-    <!-- CONTENIDO LEGAL -->
-    <main>
-        <div class="container">
-            <h1>Política de Privacidad</h1>
-            <p class="date">Última actualización: 12 de julio de 2025</p>
-            <div class="legal-content">
-                <p>
-                    En Artífices Studio (“nosotros”, “nuestro”), respetamos tu privacidad y nos comprometemos a proteger
-                    tus datos personales. Esta política de privacidad te informará sobre cómo cuidamos tus datos
-                    personales
-                    cuando visitas nuestro sitio web (independientemente de desde dónde lo visites) y te informará sobre
-                    tus
-                    derechos de privacidad y cómo la ley te protege.
-                </p>
-                <h2>1. ¿Quiénes somos?</h2>
-                <p>
-                    Artífices Studio es un estudio creativo experimental responsable de tus datos personales. Si tienes
-                    alguna pregunta sobre esta política de privacidad, puedes contactarnos a través de
-                    <strong>hablemos@artifices.cl</strong>.
-                </p>
-                <h2>2. ¿Qué datos recopilamos?</h2>
-                <p>Recopilamos y procesamos los siguientes datos personales a través de nuestro formulario de contacto y
-                    diagnóstico:</p>
-                <ul>
-                    <li><strong>Datos de Identidad:</strong> Nombre y apellido.</li>
-                    <li><strong>Datos de Contacto:</strong> Dirección de correo electrónico.</li>
-                    <li><strong>Datos Profesionales:</strong> Nombre de tu empresa y sitio web actual.</li>
-                    <li><strong>Datos Técnicos:</strong> Dirección IP, tipo y versión del navegador, configuración de
-                        zona
-                        horaria y ubicación, tipos y versiones de plug-in del navegador, sistema operativo y plataforma,
-                        y otra
-                        tecnología en los dispositivos que utilizas para acceder a este sitio web.</li>
-                    <li><strong>Datos de Uso:</strong> Información sobre cómo utilizas nuestro sitio web.</li>
-                </ul>
-                <h2>3. ¿Cómo usamos tus datos?</h2>
-                <p>Utilizamos tus datos para los siguientes propósitos:</p>
-                <ul>
-                    <li><strong>Para proveer nuestro servicio:</strong> Para contactarte y agendar el “Diagnóstico de
-                        Potencial de Marca” que has solicitado.</li>
-                    <li><strong>Para marketing y comunicaciones:</strong> Para enviarte información sobre nuestros
-                        servicios, casos de éxito o contenido que consideremos de tu interés, siempre que nos hayas dado
-                        tu consentimiento para ello. Usamos <strong>Brevo</strong> para gestionar estas comunicaciones.
-                    </li>
-                    <li><strong>Para gestión interna:</strong> Para crear una tarea de seguimiento en nuestro sistema de
-                        gestión de proyectos, <strong>ClickUp</strong>, y así asegurar un servicio de alta calidad.</li>
-                    <li><strong>Para análisis y mejora:</strong> Para analizar el uso de nuestro sitio web y mejorar la
-                        experiencia del usuario, utilizando herramientas como Google Analytics.</li>
-                </ul>
-                <h2>4. ¿Con quién compartimos tus datos?</h2>
-                <p>Para poder ofrecerte nuestros servicios, compartimos tus datos con los siguientes proveedores
-                    (terceros), quienes actúan como procesadores de datos bajo nuestras instrucciones:</p>
-                <ul>
-                    <li><strong>Brevo (Sendinblue):</strong> Para la automatización de marketing y gestión de listas de
-                        correo.</li>
-                    <li><strong>ClickUp:</strong> Para la gestión interna de proyectos y seguimiento de leads.</li>
-                    <li><strong>Google (reCAPTCHA y Analytics):</strong> Para la seguridad del sitio y el análisis de
-                        uso.</li>
-                    <li><strong>Hostinger:</strong> Nuestro proveedor de hosting, donde se alojan los datos del sitio.
-                    </li>
-                </ul>
-                <p>No vendemos ni alquilamos tus datos personales a terceros.</p>
-                <h2>5. Seguridad de los datos</h2>
-                <p>
-                    Hemos implementado medidas de seguridad adecuadas para evitar que tus datos personales se pierdan
-                    accidentalmente, se usen o se acceda a ellos de forma no autorizada. El acceso a tus datos
-                    personales
-                    está limitado a aquellos empleados o terceros que tienen una necesidad comercial legítima de
-                    conocerlos.
-                </p>
-                <h2>6. Tus derechos legales</h2>
-                <p>Bajo la ley de protección de datos, tienes derechos en relación con tus datos personales, que
-                    incluyen el derecho a:</p>
-                <ul>
-                    <li><strong>Acceder</strong> a tus datos personales.</li>
-                    <li><strong>Rectificar</strong> datos incorrectos o incompletos.</li>
-                    <li><strong>Cancelar</strong> el procesamiento de tus datos (derecho al olvido).</li>
-                    <li><strong>Oponerte</strong> al procesamiento de tus datos.</li>
-                    <li><strong>Limitar</strong> el procesamiento de tus datos.</li>
-                    <li><strong>Solicitar la portabilidad</strong> de tus datos.</li>
-                </ul>
-                <p>Si deseas ejercer alguno de estos derechos, por favor contáctanos.</p>
-                <h2>7. Cookies</h2>
-                <p>
-                    Nuestro sitio web utiliza cookies para distinguirte de otros usuarios, lo que nos ayuda a
-                    proporcionarte
-                    una buena experiencia al navegar y también nos permite mejorar nuestro sitio.
-                </p>
-                <h2>8. Cambios a esta política</h2>
-                <p>
-                    Nos reservamos el derecho de actualizar esta política de privacidad en cualquier momento. Cualquier
-                    cambio será publicado en esta página con una fecha de actualización revisada.
-                </p>
-            </div>
-        </div>
-    </main>
-    <!-- FOOTER -->
-    <footer>
-        <div class="container">
-            <p>© 2024 Artífices Studio. Todos los derechos reservados.</p>
-        </div>
-    </footer>
-</body>
+ 
 
+  <!-- HEADER -->
+  <header>
+    <div class="container header-inner">
+      <a href="/" title="Inicio" class="logo" aria-label="Volver al inicio">
+        <div class="header-logo-stack">
+          <img src="/assets/images/logotipoartificesoficial.svg" alt="Logotipo Artífices" />
+          <span class="font-primary tagline">Experimental Creative Studio</span>
+        </div>
+      </a>
+    </div>
+  </header>
+
+  <main>
+    <div class="container legal">
+      <h1 class="font-primary">Política de Privacidad</h1>
+      <p class="date">Última actualización: 25 de julio de 2025</p>
+
+      <h2>1. Quiénes somos</h2>
+      <p>
+        <strong>Artífices – Creative Studio</strong> (en adelante, “Artífices”, “nosotros”) es responsable del
+        tratamiento de los datos personales recabados en este sitio. Puedes contactarnos en
+        <a href="mailto:hablemos@artifices.cl">hablemos@artifices.cl</a>.
+      </p>
+
+      <h2>2. Marco normativo</h2>
+      <p>
+        Tratamos datos conforme a la <strong>Ley N.º 19.628 sobre Protección de la Vida Privada</strong> (Chile). Además,
+        hemos adoptado medidas para anticipar el cumplimiento de la <strong>Ley N.º 21.719</strong>, publicada el 1 de
+        diciembre de 2024, que entrará en vigor tras un periodo de vacancia legal de 24 meses y crea la Agencia de
+        Protección de Datos Personales.
+      </p>
+
+      <h2>3. Datos que recolectamos</h2>
+      <ul>
+        <li><strong>Identificación y contacto:</strong> nombre y correo electrónico.</li>
+        <li><strong>Datos profesionales:</strong> empresa y sitio web.</li>
+        <li><strong>Datos técnicos y de uso:</strong> dirección IP, agente de usuario, eventos de navegación, cookies o tecnologías similares para analítica y seguridad (incluido reCAPTCHA).</li>
+      </ul>
+
+      <h2>4. Finalidades</h2>
+      <ol>
+        <li><strong>Gestionar tu solicitud</strong> y coordinar la llamada de diagnóstico.</li>
+        <li><strong>Comunicación comercial</strong> sobre servicios, casos y contenidos, cuando nos autorices.</li>
+        <li><strong>Seguridad del sitio</strong> (reCAPTCHA) y <strong>analítica/medición</strong> (Google Tag Manager/Analytics con Consent Mode v2).</li>
+        <li><strong>Gestión interna</strong> y trazabilidad de leads.</li>
+      </ol>
+
+      <h2>5. Bases de licitud</h2>
+      <ul>
+        <li><strong>Ejecución de medidas precontractuales:</strong> atender tu solicitud de diagnóstico.</li>
+        <li><strong>Consentimiento:</strong> envíos de marketing y mediciones publicitarias. Puedes retirarlo en cualquier momento.</li>
+        <li><strong>Interés legítimo:</strong> seguridad y prevención de fraude con mínima injerencia y salvaguardas.</li>
+      </ul>
+
+      <h2>6. Encargados y destinatarios</h2>
+      <p>Empleamos encargados de tratamiento externos, bajo nuestras instrucciones contractuales:</p>
+      <ul>
+        <li><strong>Brevo (Sendinblue, UE):</strong> gestión de contactos y envíos. Cumplimiento GDPR.</li>
+        <li><strong>Netlify (global):</strong> hosting estático y funciones serverless.</li>
+        <li><strong>Cloudflare (global):</strong> CDN, optimización y mitigación de ataques.</li>
+        <li><strong>Google LLC:</strong> reCAPTCHA v3, Tag Manager y Analytics.</li>
+      </ul>
+      <p>No vendemos tus datos personales. Podremos comunicar información si una autoridad competente lo exige.</p>
+
+      <h2>7. Transferencias internacionales</h2>
+      <p>
+        Tus datos pueden transferirse a países con distintos niveles de protección. Adoptamos cláusulas contractuales y
+        medidas técnicas y organizativas adecuadas para protegerlos. Consulta las políticas de cada proveedor para más
+        detalle.
+      </p>
+
+      <h2>8. Plazos de conservación</h2>
+      <ul>
+        <li><strong>Leads comerciales:</strong> hasta 24 meses desde el último contacto efectivo o hasta que solicites su eliminación.</li>
+        <li><strong>Registros técnicos de seguridad:</strong> por el tiempo estrictamente necesario para fines de seguridad y diagnóstico de incidentes.</li>
+      </ul>
+
+      <h2>9. Derechos de las personas</h2>
+      <p>
+        Puedes ejercer los derechos de <strong>acceso</strong>, <strong>rectificación</strong>, <strong>cancelación/eliminación</strong>,
+        <strong>oposición</strong>, <strong>limitación</strong> y, cuando proceda, <strong>portabilidad</strong>. Cuando el tratamiento se
+        base en tu consentimiento, podrás <strong>revocarlo</strong> sin afectar la licitud del tratamiento anterior. Escríbenos a
+        <a href="mailto:hablemos@artifices.cl">hablemos@artifices.cl</a>.
+      </p>
+
+      <h2>10. reCAPTCHA v3</h2>
+      <p>
+        Este sitio está protegido por <strong>Google reCAPTCHA</strong> y se aplican la <a href="https://policies.google.com/privacy" rel="noopener" target="_blank">Política de Privacidad</a>
+        y los <a href="https://policies.google.com/terms" rel="noopener" target="_blank">Términos del Servicio</a> de Google. El servicio puede recopilar datos mínimos necesarios para
+        evaluar el riesgo de abuso (como dirección IP y patrones de interacción) con fines estrictamente de seguridad.
+      </p>
+
+      <h2>11. Cookies y Consent Mode v2</h2>
+      <p>
+        Utilizamos Google Tag Manager para gestionar etiquetas y aplicamos <strong>Consent Mode v2</strong>, que respeta tu decisión
+        sobre almacenamiento publicitario (<code>ad_storage</code>), analítico (<code>analytics_storage</code>), y señales adicionales
+        de anuncios (<code>ad_user_data</code>, <code>ad_personalization</code>). Puedes modificar tus preferencias en el banner o centro
+        de privacidad.
+      </p>
+
+      <h2>12. Seguridad</h2>
+      <p>
+        Aplicamos medidas técnicas y organizativas razonables: cifrado TLS, control de accesos, principios de minimización, registros
+        de actividad y revisiones periódicas de permisos. Proveedores como Netlify y Cloudflare aportan protecciones adicionales a
+        nivel de infraestructura.
+      </p>
+
+      <h2>13. Cambios a esta política</h2>
+      <p>
+        Podremos actualizar esta Política para reflejar cambios normativos o de nuestros servicios. Publicaremos la versión vigente
+        con su fecha de actualización; los cambios relevantes se comunicarán por medios razonables.
+      </p>
+
+      <hr />
+      <p class="recaptcha-note">
+        <strong>Aviso reCAPTCHA:</strong> Este sitio está protegido por reCAPTCHA y se aplican la
+        <a href="https://policies.google.com/privacy" target="_blank" rel="noopener">Política de Privacidad</a> y los
+        <a href="https://policies.google.com/terms" target="_blank" rel="noopener">Términos del Servicio</a> de Google.
+      </p>
+
+      <p class="cookies-note">
+        <a id="open-privacy-center" href="#" onclick="window.dataLayer=window.dataLayer||[];window.dataLayer.push({event:'open_consent_preferences'});return false;">
+          Preferencias de cookies</a>
+      </p>
+    </div>
+  </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="container">
+      <nav class="links">
+        <a href="/pages/politica-privacidad.html">Política de Privacidad</a>
+        <a href="/pages/terminos-condiciones.html">Términos y Condiciones</a>
+      </nav>
+      <p>© 2024 Artífices – Creative Studio. Todos los derechos reservados.</p>
+    </div>
+  </footer>
+</body>
 </html>
