--- a/public/pages/terminos-condiciones.html
+++ b/public/pages/terminos-condiciones.html
@@ -1,111 +1,113 @@
 <!DOCTYPE html>
-
 <html lang="es">
-
 <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Términos y Condiciones – Artífices Studio</title>
-    <!-- Tipografías -->
-    <link href="https://use.typekit.net/nwp0lmg.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/helvetica_neue.css">
-    <link rel="stylesheet" href="/css/styles.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Términos y Condiciones – Artífices – Creative Studio</title>
+  <meta name="description" content="Términos y Condiciones de uso del sitio de Artífices – Creative Studio. Reglas de uso, propiedad intelectual, limitación de responsabilidad y contacto." />
+  <link rel="canonical" href="https://landing.artifices.studio/pages/terminos-condiciones.html" />
 
-    <link rel="icon" type="image/svg+xml" href="/assets/icons/favicon.svg">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/assets/icons/favicon-96x96.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <meta name="apple-mobile-web-app-title" content="Artífices">
-    <meta name="theme-color" content="#000000">
+  <!-- Tipografías y estilos -->
+  <link rel="stylesheet" href="https://use.typekit.net/nwp0lmg.css" />
+  <link rel="stylesheet" href="/css/helvetica_neue.css" />
+  <link rel="stylesheet" href="/css/styles.css" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/assets/icons/favicon.svg" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <meta name="theme-color" content="#000000" />
 
 </head>
-
 <body>
-    <!-- HEADER -->
-    <header>
-        <div class="container header-inner">
-            <a href="/" title="Inicio" class="logo" aria-label="Volver al inicio">
-            <div style="display:flex;flex-direction:column;align-items:center">
-                <img
-                src="/assets/images/logotipoartificesoficial.svg"
-                alt="Logotipo Artífices"
-                style="height:1.75rem" />
-                <span class="font-primary tagline">Experimental Creative Studio</span>
-            </div>
-            </a>
+  <!-- HEADER -->
+  <header>
+    <div class="container header-inner">
+      <a href="/" title="Inicio" class="logo" aria-label="Volver al inicio">
+        <div class="header-logo-stack">
+          <img src="/assets/images/logotipoartificesoficial.svg" alt="Logotipo Artífices" />
+          <span class="font-primary tagline">Experimental Creative Studio</span>
         </div>
-    </header>
-    <!-- CONTENIDO LEGAL -->
-    <main>
-        <div class="container">
-            <h1>Términos y Condiciones de Uso</h1>
-            <p class="date">Última actualización: 12 de julio de 2025</p>
-            <div class="legal-content">
-                <p>Bienvenido a Artífices Studio. Estos términos y condiciones describen las reglas y regulaciones para
-                    el uso del sitio web de Artífices Studio, ubicado en [la URL de tu sitio web].</p>
-                <p>Al acceder a este sitio web, asumimos que aceptas estos términos y condiciones. No continúes usando
-                    Artífices Studio si no estás de acuerdo con todos los términos y condiciones establecidos en esta
-                    página.</p>
-                <h3>1. Propiedad Intelectual</h3>
-                <p>Salvo que se indique lo contrario, Artífices Studio y/o sus licenciantes son propietarios de los
-                    derechos de propiedad intelectual de todo el material en este sitio web. Todo el contenido,
-                    incluyendo textos, gráficos, logotipos, imágenes y la compilación de los mismos, es propiedad de
-                    Artífices Studio y está protegido por las leyes de derechos de autor y otras leyes de propiedad
-                    intelectual.</p>
-                <p>No debes:</p>
-                <ul>
-                    <li>Republicar material de Artífices Studio.</li>
-                    <li>Vender, alquilar o sub-licenciar material de Artífices Studio.</li>
-                    <li>Reproducir, duplicar o copiar material de Artífices Studio.</li>
-                    <li>Redistribuir contenido de Artífices Studio.</li>
-                </ul>
-                <h3>2. Uso del Sitio Web</h3>
-                <p>Se te concede una licencia limitada solo para fines de visualización del material contenido en este
-                    sitio web. Se te prohíbe específicamente todo lo siguiente:</p>
-                <ul>
-                    <li>Usar este sitio web de cualquier forma que sea o pueda ser perjudicial para este sitio web.</li>
-                    <li>Usar este sitio web de cualquier forma que afecte el acceso de los usuarios a este sitio web.
-                    </li>
-                    <li>Usar este sitio web en contra de las leyes y regulaciones aplicables, o de cualquier manera que
-                        pueda causar daño al sitio web, o a cualquier persona o entidad comercial.</li>
-                    <li>Participar en cualquier tipo de extracción o recolección de datos en relación con este sitio
-                        web.</li>
-                </ul>
-                <h3>3. Exclusión de Garantías</h3>
-                <p>Este sitio web se proporciona “tal cual”, con todos sus defectos, y Artífices Studio no expresa
-                    representaciones ni garantías de ningún tipo relacionadas con este sitio web o los materiales
-                    contenidos en él. Además, nada de lo contenido en este sitio web se interpretará como un
-                    asesoramiento para ti.</p>
-                <h3>4. Limitación de Responsabilidad</h3>
-                <p>En ningún caso Artífices Studio, ni ninguno de sus directores y empleados, serán responsables de nada
-                    que surja de o esté relacionado de alguna manera con tu uso de este sitio web. Artífices Studio no
-                    será responsable de ninguna responsabilidad indirecta, consecuente o especial que surja de tu uso de
-                    este sitio web.</p>
-                <h3>5. Indemnización</h3>
-                <p>Por la presente, indemnizas en la mayor medida posible a Artífices Studio de y contra cualquiera y
-                    todos los daños y gastos que surjan de tu incumplimiento de estos Términos.</p>
-                <h3>6. Divisibilidad</h3>
-                <p>Si alguna disposición de estos Términos se considera inválida según cualquier ley aplicable, dicha
-                    disposición se eliminará sin afectar las disposiciones restantes.</p>
-                <h3>7. Modificación de los Términos</h3>
-                <p>Artífices Studio puede revisar estos Términos en cualquier momento, y al usar este sitio web se
-                    espera que los revises regularmente.</p>
-                <h3>8. Ley Aplicable y Jurisdicción</h3>
-                <p>Estos Términos se regirán e interpretarán de acuerdo con las leyes de la República de Chile, y te
-                    sometes a la jurisdicción no exclusiva de los tribunales ubicados en Santiago para la resolución de
-                    cualquier disputa.</p>
-                <h3>9. Contacto</h3>
-                <p>Si tienes alguna pregunta sobre estos Términos, por favor contáctanos en [tu email de contacto].</p>
-            </div>
-        </div>
-    </main>
-    <!-- FOOTER -->
-    <footer>
-        <div class="container">
-            <p>© 2024 Artífices Studio. Todos los derechos reservados.</p>
-        </div>
-    </footer>
-</body>
+      </a>
+    </div>
+  </header>
 
+  <main>
+    <div class="container legal">
+      <h1 class="font-primary">Términos y Condiciones de Uso</h1>
+      <p class="date">Última actualización: 25 de julio de 2025</p>
+
+      <h2>1. Aceptación de los Términos</h2>
+      <p>
+        Al acceder y utilizar este sitio web, aceptas estos Términos y Condiciones. Si no estás de acuerdo, por favor
+        abstente de utilizar el sitio.
+      </p>
+
+      <h2>2. Uso permitido</h2>
+      <p>
+        Se te concede una licencia limitada para visualizar el contenido del sitio con fines informativos. Queda prohibido:
+      </p>
+      <ul>
+        <li>Usar el sitio de forma que pueda perjudicar su disponibilidad o funcionamiento.</li>
+        <li>Eludir medidas de seguridad o intentar acceder a áreas restringidas.</li>
+        <li>Realizar actividades de scraping o recolección automatizada de datos sin autorización.</li>
+      </ul>
+
+      <h2>3. Propiedad intelectual</h2>
+      <p>
+        Salvo indicación en contrario, todos los contenidos de este sitio (textos, marcas, logotipos, gráficos, piezas
+        audiovisuales, diseños y código) son titularidad de Artífices o se utilizan con autorización de sus titulares.
+        No se concede licencia de uso distinta a la necesaria para la navegación.
+      </p>
+
+      <h2>4. Contenidos de terceros y enlaces</h2>
+      <p>
+        El sitio puede contener enlaces a páginas externas operadas por terceros. Artífices no controla ni responde por
+        el contenido o prácticas de privacidad de dichos sitios.
+      </p>
+
+      <h2>5. Limitación de responsabilidad</h2>
+      <p>
+        El sitio se ofrece “tal cual” y “según disponibilidad”. En la medida permitida por la ley aplicable, Artífices no
+        será responsable por daños indirectos, incidentales, especiales o consecuentes derivados del uso o imposibilidad
+        de uso del sitio.
+      </p>
+
+      <h2>6. Protección de datos personales</h2>
+      <p>
+        El tratamiento de los datos personales se rige por nuestra <a href="/pages/politica-privacidad.html">Política de Privacidad</a>.
+        Al utilizar el sitio, reconoces haberla leído y entendido.
+      </p>
+
+      <h2>7. Cambios en los Términos</h2>
+      <p>
+        Podemos modificar estos Términos cuando resulte necesario. La versión vigente será publicada en esta página con
+        la fecha de actualización correspondiente.
+      </p>
+
+      <h2>8. Ley aplicable y jurisdicción</h2>
+      <p>
+        Estos Términos se rigen por las leyes de la República de Chile. Para cualquier controversia, las partes se
+        someten a la jurisdicción de los tribunales de Santiago, sin perjuicio de las reglas de competencia legal.
+      </p>
+
+      <h2>9. Contacto</h2>
+      <p>
+        Para preguntas sobre estos Términos, escríbenos a <a href="mailto:hablemos@artifices.cl">hablemos@artifices.cl</a>.
+      </p>
+    </div>
+  </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="container">
+      <nav class="links">
+        <a href="/pages/politica-privacidad.html">Política de Privacidad</a>
+        <a href="/pages/terminos-condiciones.html">Términos y Condiciones</a>
+      </nav>
+      <p>© 2024 Artífices – Creative Studio. Todos los derechos reservados.</p>
+    </div>
+  </footer>
+</body>
 </html>
