legal: aviso reCAPTCHA en formulario y footer

--- a/src/index.html
+++ b/src/index.html
@@ -246,6 +246,13 @@
           <p class="form-note">
             ✓ Totalmente confidencial &nbsp;✓ Sesión sin costo ni compromiso.
           </p>
+          <p class="recaptcha-disclaimer">
+            Este sitio está protegido por reCAPTCHA y se aplican la
+            <a href="https://policies.google.com/privacy?hl=es" target="_blank" rel="noopener">Política de Privacidad</a>
+            y los
+            <a href="https://policies.google.com/terms?hl=es" target="_blank" rel="noopener">Términos de Servicio</a>
+            de Google.
+          </p>
         </div>
       </div>
     </section>
@@ -259,6 +266,14 @@
         <a href="/pages/terminos-condiciones.html">Términos y Condiciones</a>
       </nav>
       <p>© 2024 Artífices - Creative Studio. Todos los derechos reservados.</p>
+        <p class="recaptcha-disclaimer recaptcha-disclaimer--footer">
+          Este sitio está protegido por reCAPTCHA y se aplican la
+          <a href="https://policies.google.com/privacy?hl=es" target="_blank" rel="noopener">Política de Privacidad</a>
+          y los
+          <a href="https://policies.google.com/terms?hl=es" target="_blank" rel="noopener">Términos de Servicio</a>
+          de Google.
+        </p>
+
     </div>
   </footer>
 
