--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,28 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="robots" content="index,follow" />
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    // Consent Mode v2: todo denegado por defecto
+    window.dataLayer.push({
+      'gtm.start': new Date().getTime(), event: 'gtm.js'
+    });
+    window.dataLayer.push({
+      event: 'default_consent_set',
+      'consentDefaults': true
+    });
+    // API gtag
+    window.gtag = function(){ dataLayer.push(arguments); };
+    gtag('consent', 'default', {
+      'ad_storage': 'denied',
+      'analytics_storage': 'denied',
+      'ad_user_data': 'denied',
+      'ad_personalization': 'denied',
+      'functionality_storage': 'granted',  // cookies necesarias
+      'security_storage': 'granted'
+    });
+  </script>
+
 
   <!-- Google Tag Manager -->
   <%- gtmHead %>
@@ -258,6 +280,23 @@
     </section>
   </main>
 
+  <!-- …antes del </main> o justo antes del <footer> -->
+<div id="cookie-banner" class="cookie-banner" role="region" aria-label="Preferencias de cookies">
+  <div class="cookie-banner__inner">
+    <p class="cookie-banner__text">
+      Usamos cookies para mejorar la experiencia y medir el rendimiento.
+      Las cookies de análisis y publicidad se cargarán solo si aceptas.
+      Puedes revisar los detalles en nuestra
+      <a href="/pages/politica-privacidad.html">Política de Privacidad</a>.
+    </p>
+    <div class="cookie-banner__actions">
+      <button id="btn-consent-reject" class="btn-secondary" type="button">Rechazar</button>
+      <button id="btn-consent-accept" class="btn-primary" type="button">Aceptar</button>
+    </div>
+  </div>
+</div>
+
+
   <!-- FOOTER -->
   <footer>
     <div class="container">
@@ -285,6 +324,8 @@
 <script src="https://www.google.com/recaptcha/api.js?render=<%- VITE_RECAPTCHA_SITE_KEY %>"></script>
 
   <script type="module" src="/scripts/form.js"></script>
+  <script type="module" src="/scripts/consent.js"></script>
+
 
 </body>
 </html>
