--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
         <h3 class="text-center font-primary brands-title">
           Marcas en las que nuestros fundadores han sido artífices
         </h3>
-        <div class="scroller" role="region" aria-label="Marcas de clientes de Artífices">
+        <div class="scroller scroller--fade" role="region" aria-label="Marcas de clientes de Artífices">
   <ul class="scroller-track" aria-live="off">
     <!-- LOOP 1 -->
     <div class="scroller-item" aria-label="Aerovan">
