--- a/src/index.html
+++ b/src/index.html
@@ -644,7 +644,16 @@
           <div class="testimonials-v3-wrapper">
             <!-- Rodrigo -->
             <article class="testimonials-v3-card">
-              <img class="avatar" src="assets/avatars/rodrigo.webp" alt="Rodrigo Rivera">
+              <img
+                class="avatar"
+                width="64" height="64"
+                src="/assets/avatars/rodrigo-64.webp"
+                srcset="/assets/avatars/rodrigo-64.webp 64w,
+                        /assets/avatars/rodrigo-96.webp 96w,
+                        /assets/avatars/rodrigo-128.webp 128w"
+                sizes="64px"
+                loading="lazy" decoding="async" fetchpriority="low"
+                alt="Rodrigo Rivera">
               <p>Artífices no solo rediseñó nuestro logo: <strong>redefinió el ADN de Blindatek</strong>. El diagnóstico reveló oportunidades que se tradujeron en un aumento de leads y una identidad que hoy reconocen nuestros clientes en segundos.</p>
               <div class="testimonial-author">Rodrigo Rivera</div>
               <div class="testimonial-role">CEO, Blindatek</div>
@@ -653,7 +662,16 @@
 
             <!-- Natalia -->
             <article class="testimonials-v3-card">
-              <img class="avatar" src="assets/avatars/natalia.webp" alt="Natalia Beiza">
+              <img
+                class="avatar"
+                width="64" height="64"
+                src="/assets/avatars/natalia-64.webp"
+                srcset="/assets/avatars/natalia-64.webp 64w,
+                        /assets/avatars/natalia-96.webp 96w,
+                        /assets/avatars/natalia-128.webp 128w"
+                sizes="64px"
+                loading="lazy" decoding="async" fetchpriority="low"
+                alt="Natalia Beiza">
               <p>Partí con una idea y muchas dudas. Artífices convirtió ese boceto en <strong>Comprende.me</strong>: nombre, identidad y una estrategia digital que conecta con cientos de familias. Sentí que tenía un <strong>equipo in-house</strong> desde el primer día.</p>
               <div class="testimonial-author">Natalia Beiza</div>
               <div class="testimonial-role">Fundadora, Comprende.me</div>
@@ -662,7 +680,16 @@
 
             <!-- José Durán -->
             <article class="testimonials-v3-card">
-              <img class="avatar" src="assets/avatars/jose.webp" alt="José Durán">
+              <img
+                class="avatar"
+                width="64" height="64"
+                src="/assets/avatars/jose-64.webp"
+                srcset="/assets/avatars/jose-64.webp 64w,
+                        /assets/avatars/jose-96.webp 96w,
+                        /assets/avatars/jose-128.webp 128w"
+                sizes="64px"
+                loading="lazy" decoding="async" fetchpriority="low"
+                alt="José Durán">
               <p>Artífices lideró el <strong>naming</strong>, el <strong>branding</strong>, el diseño de interfaz y la estrategia de marketing de nuestra nueva plataforma. Lanzar con un concepto tan sólido nos puso en el mapa desde el día cero.</p>
               <div class="testimonial-author">José Durán</div>
               <div class="testimonial-role">CEO Creafive</div>
