--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
           Solicita un <strong class="font-bold">Diagnóstico de Potencial de Marca</strong>
           100&nbsp;% gratuito. En una llamada estratégica de 30 minutos, un experto de Artífices analizará tu negocio y te
           entregará un plan de acción inicial para convertir tu marca en un verdadero motor de crecimiento.
-        </p>
+        </p><a class="btn-primary" href="#diagnostico">Solicitar mi Diagnóstico Gratuito</a>
       </div>
     </section>
 
